# MGT-Eval

./: .env  .gitignore  README.md  README.zh.md  __init__.py  call_baseline.py  call_calibrate.py  call_fdgpt.py  cli.py  environment.yml  mgt_eval-0.0.1-py3-none-any.whl  pyproject.toml  quickstart_binoculars.py  quickstart_detectgpt.py  quickstart_dna_gpt.py  quickstart_gltr.py  quickstart_lastde.py  quickstart_lastdepp.py  quickstart_lrr.py  quickstart_npr.py  quickstart_raidar.py  quickstart_tocsin.py  requirements.txt  start_dev.sh
backend/: __init__.py  main.py  requirements.txt
calibration/: Calibrate.py  platt.py  registry.py  runner.py
calibration_results/: binoculars_gpt-neo-125m_gpt-neo-125m_arxiv.llama32_3b.train_10000_114514.json  calibrator_TOCSIN_GPT-Neo-2.7B_all.jsonl.json  calibrator_binoculars_GPT-Neo-2.7B_all.jsonl.json  calibrator_binoculars_falcon-7b_all.jsonl.json  calibrator_detectgpt_GPT-Neo-2.7B_all.jsonl.json  calibrator_dnagpt_GPT-Neo-2.7B_all.jsonl.json  calibrator_entropy_GPT-Neo-2.7B_all.jsonl.json  calibrator_fastdetectgpt_GPT-Neo-2.7B_all.jsonl.json  calibrator_gltr_GPT-Neo-2.7B_all.jsonl.json  calibrator_lastde_GPT-Neo-2.7B_all.jsonl.json  calibrator_lastdepp_GPT-Neo-2.7B_all.jsonl.json  calibrator_likelihood_GPT-Neo-2.7B_all.jsonl.json  calibrator_logrank_GPT-Neo-2.7B_all.jsonl.json  calibrator_lrr_GPT-Neo-2.7B_all.jsonl.json  calibrator_npr_GPT-Neo-2.7B_all.jsonl.json  calibrator_raidar_llama-3.2-1b-instruct_all.jsonl.json  calibrator_rank_GPT-Neo-2.7B_all.jsonl.json  detectgpt_gpt-neo-125m_t5-small_arxiv.llama32_3b.train_10000_114514.json  dnadetectllm_gpt-neo-125m_gpt-neo-125m_arxiv.llama32_3b.train_10000_114514.json  dnagpt_Llama-3.2-3B-Instruct_arxiv.llama32_3b.train_10000_114514.json  entropy_gpt-neo-125m_arxiv.llama32_3b.train_10000_114514.json  fastdetectgpt_gpt-neo-125m_gpt-neo-125m_arxiv.llama32_3b.train_10000_114514.json  gltr_gpt-neo-125m_arxiv.llama32_3b.train_10000_114514.json  lastde_gpt-neo-125m_arxiv.llama32_3b.train_10000_114514.json  lastdepp_gpt-neo-125m_gpt-neo-125m_arxiv.llama32_3b.train_10000_114514.json  likelihood_gpt-neo-125m_arxiv.llama32_3b.train_10000_114514.json  logrank_gpt-neo-125m_arxiv.llama32_3b.train_10000_114514.json  lrr_gpt-neo-125m_arxiv.llama32_3b.train_10000_114514.json  npr_gpt-neo-125m_t5-small_arxiv.llama32_3b.train_10000_114514.json  raidar_Llama-3.2-3B-Instruct_arxiv.llama32_3b.train_10000_114514.json  rank_gpt-neo-125m_arxiv.llama32_3b.train_10000_114514.json  tocsin_gpt-neo-125m_gpt-neo-125m_arxiv.llama32_3b.train_10000_114514.json
data/: arxiv.deepseek_chat.test.jsonl  arxiv.gemma3_4b.test.jsonl  arxiv.llama32_3b.train.build.fixed.jsonl  arxiv.llama32_3b.train.build.jsonl  arxiv.llama32_3b.train.jsonl  arxiv.openai_gpt_4o_mini.test.jsonl  arxiv.qwen3_4b.test.jsonl  peerread.deepseek_chat.test.jsonl  peerread.gemma3_4b.test.jsonl  peerread.llama32_3b.test.jsonl  peerread.openai_gpt_4o_mini.test.jsonl  peerread.qwen3_4b.test.jsonl  reddit.deepseek_chat.test.jsonl  reddit.gemma3_4b.test.jsonl  reddit.llama32_3b.test.jsonl  reddit.openai_gpt_4o_mini.test.jsonl  reddit.qwen3_4b.test.jsonl  wikihow.deepseek_chat.test.jsonl  wikihow.gemma3_4b.test.jsonl  wikihow.llama32_3b.test.jsonl  wikihow.openai_gpt_4o_mini.test.jsonl  wikihow.qwen3_4b.test.jsonl  wikipedia.deepseek_chat.test.jsonl  wikipedia.gemma3_4b.test.jsonl  wikipedia.llama32_3b.test.jsonl  wikipedia.openai_gpt_4o_mini.test.jsonl  wikipedia.qwen3_4b.test.jsonl
data_utils/: hc3.py  load.py
dataset_builder/: attacks copy.json  attacks.json  attacks_span.json  builder.py  cli.py  config.py  io_utils.py
detectors/: __init__.py  base.py  registry.py
eval/: __init__.py  _asr.py  _metrics_basic.py  _utils_env.py  (+3 more)
(+248 files in other folders)
