[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MGT_Eval"
version = "0.0.1"
description = "A unified evaluation framework for Machine-Generated-Text detectors with calibration, CLI, and dataset utilities."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yuanfan Li, Qi Zhou", email = "liyuan7716@gmail.com" }]
dependencies = [
  "numpy>=1.23,<3",
  "tqdm>=4.66,<5",
  "regex>=2023.10.3",
  "transformers>=4.38,<5",
  "scikit-learn>=1.3,<2",
  "torch>=2.2.0,<2.9.0",
  "platformdirs>=4.4.0,<4.6.0",
  "pandas>=2.3.0",
  "spacy>=3.8.0",
  "torch_geometric>=2.6.0,<2.8.0",
  "matplotlib>=3.10.0,<3.10.8",
  "accelerate>=1.11.0"
]

[project.optional-dependencies]
dev = ["pip-tools>=7.4", "build>=1.2", "pytest>=7.4"]
viz = ["matplotlib>=3.8"]

[project.scripts]
mgt_eval = "mgt_eval.cli:main"   # 会安装一个命令 mgt_eval
mgteval  = "mgt_eval.cli:main"   # 可选：顺手再装一个别名

[tool.setuptools]
# 关键：把“当前目录 .”当作包 mgt_eval 的包根
package-dir = { "mgt_eval" = "." }
packages = [
  "mgt_eval",
  "mgt_eval.eval",
  "mgt_eval.detectors",
  "mgt_eval.detectors.metric",
  "mgt_eval.detectors.pretrained",
  "mgt_eval.detectors.finetuned",
  "mgt_eval.calibration",
  "mgt_eval.data_utils",
  "mgt_eval.metrics",
  "mgt_eval.utils",
  "mgt_eval.visualize",
  "mgt_eval.train",
  # 若还有别的子包，这里都要列上
]
include-package-data = true

[tool.setuptools.package-data]
"mgt_eval" = [
  "calibration_results/*.json",
  "calibration_results/*.jsonl.json"
]
