[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# 发行名建议用小写+短横线（PEP 规范）；下划线会被规范化处理
# 如果你已经在某些环境里用 MGT_Eval 了，也可以保留，但我仍建议改成 mgt-eval
name = "mgt-eval"
version = "0.0.1"
description = "A unified evaluation framework for Machine-Generated-Text detectors with calibration, CLI, and dataset utilities."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Yuanfan Li" , email = "liyuan7716@gmail.com" },
  { name = "Qi Zhou" }
]

# -------------------------
# 核心依赖（尽量只放“运行时直接 import 用到的”）
# torch 必选；vllm 做成 extra（下面 optional-dependencies）
# -------------------------
dependencies = [
  # core numeric / utils
  "numpy>=2.0",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "tqdm>=4.64",
  "joblib>=1.3",
  "psutil>=5.9",
  "pyyaml>=6.0",
  "regex>=2023.12.0",
  "requests>=2.31",
  "packaging>=23.2",
  "filelock>=3.12",
  "platformdirs",
  # logging / cli
  "rich>=13.7",
  "typer>=0.9",
  "shellingham>=1.5",

  # NLP / HF stack
  "torch>=2.1,<=2.9",
  "transformers>=4.51.0,<=5.0.0,!=4.52.0,!=4.57.0",
  "datasets>=2.16",
  "huggingface-hub>=0.20",
  "tokenizers>=0.20",
  "safetensors>=0.4",
  "sentencepiece>=0.1.99",
  "yake<=0.6.0",
  "fuzzywuzzy",
  "accelerate>=0.26",
  "einops>=0.6",

  # text processing 
  "nltk>=3.8",
  "jieba>=0.42.1",
  "tabulate>=0.9",
  "loguru>=0.7",
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "python-dotenv>=1.0",
  "matplotlib>=3.8",
  "pillow>=10.0",
  "faiss-cpu>=1.7.4",
  "vllm>=0.6,<=0.12",
  "aiofiles",
]

[project.scripts]
mgt_eval = "mgt_eval.cli:main"
mgteval  = "mgt_eval.cli:main"
mgteval-cli = "mgt_eval.cli:main"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }
py-modules = [
  "mgt_eval",
  "cli",
  "cli_enhanced",
  "cli_help_formatter",
  "cli_helpers",
  "demo_enhanced_cli",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dataset_builder = [
  "*.json",
  "*.jsonl",
  "*.txt",
  "*.yaml",
  "*.yml",
  "**/*.json",
  "**/*.jsonl",
  "**/*.txt",
  "**/*.yaml",
  "**/*.yml",
]
